--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,19 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-
     <meta name="description" content="Решения и услуги в области информационной безопасности">
     <meta name="author" content="Лаборатория информационной безопасности">
     <link rel="icon" href="favicon.ico">
-
     <title>{{ page.title }}</title>
     
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap core CSS & JavaScript -->-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   </head>
   
   <body>
-  
     <style>
       body {
         min-height: 75rem;
@@ -48,11 +46,6 @@
     </nav>  
 
     {{ content }}
-			
-    <!-- Bootstrap core JavaScript -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="js/bootstrap.min.js"></script>
     
   </body>
 </html>
