--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,9 @@
       </div>
     </nav>  
 
-    {{ content }}
+    <main role="main" class="container">
+      {{ content }}
+    </main>
     
   </body>
 </html>
