--- a/css/sticky-footer-navbar.css
+++ b/css/sticky-footer-navbar.css
@@ -10,7 +10,7 @@ body {
 }
 .footer {
   position: absolute;
-  padding-top: 15px;
+  margin-top: 15px;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
