--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
       </div>
     </nav>  
 
-    <main role="main" class="container">
+    <main role="main" class="container mb-3">
       {{ content }}
     </main>
     
@@ -52,7 +52,7 @@
             <span class="text-muted">Электронная почта: <a href="mailto:79208085372@ya.ru">79208085372@ya.ru</a></span><br>
           </div>
           <div class="col">
-            <span class="text-muted">Разработано с использованием <a href="https://pages.github.com/" target="_blank">GitHub&nbsp;Pages</a>, <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>, <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a></span>
+            <span class="text-muted text-right">Разработано с использованием <a href="https://pages.github.com/" target="_blank">GitHub&nbsp;Pages</a>, <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>, <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a></span>
           </div>      
         </div>
       </div>
