--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,23 +41,17 @@
       </div>
     </nav>  
 
-    <main role="main" class="container mb-3">
+    <main role="main" class="container">
       {{ content }}
+      <p>&nbsp;</p>
     </main>
     
     <footer class="footer">
       <div class="container">
-        <div class="row">
-          <div class="col">
-            <p class="text-muted">Электронная почта: <a href="mailto:79208085372@ya.ru">79208085372@ya.ru</a></p>
-          </div>
-          <div class="col">
-            <p class="text-muted text-right">Разработано с использованием <a href="https://pages.github.com/" target="_blank">GitHub&nbsp;Pages</a>, <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>, <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a></p>
-          </div>      
-        </div>
+        <span class="text-muted">Электронная почта: <a href="mailto:79208085372@ya.ru">79208085372@ya.ru</a><br>Разработано с использованием <a href="https://pages.github.com/" target="_blank">GitHub&nbsp;Pages</a>, <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>, <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a></span>
       </div>
     </footer>
-    
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
