--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,12 +49,10 @@
     <footer class="footer">
       <div class="container">
         <div class="row">
-          <div class="col">
+          <div class="col-sm">
             <span class="text-muted">Электронная почта: <a href="mailto:79208085372@ya.ru">79208085372@ya.ru</a></span>
           </div>
-        </div>
-        <div class="row">
-          <div class="col">
+          <div class="col-sm">
             <span class="text-muted">Разработано с использованием <a href="https://pages.github.com/" target="_blank">GitHub&nbsp;Pages</a>, <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>, <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a></span>
           </div>
         </div>        
