--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,20 @@
   </head>
   
   <body>
+  
+    <style>
+      body {
+        min-height: 75rem;
+        padding-top: 4.5rem;
+      }    
+      .footer {
+        background-color: #f5f5f5;
+      }
+      .footer > .container {
+        padding-right: 15px;
+        padding-left: 15px;
+      }      
+    </style>
      
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
       <a class="navbar-brand" href="index.html">Защита информации</a>
