--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,14 +57,15 @@
       <p>&nbsp;</p>
     </main>
     
+    <hr>
     <footer class="footer">
       <div class="container">
         <div class="row">
           <div class="col-sm">
-            <span class="text-muted">Электронная почта: <a href="mailto:79208085372@ya.ru">79208085372@ya.ru</a></span>
+            <p class="text-muted">Электронная почта: <a href="mailto:79208085372@ya.ru">79208085372@ya.ru</a></p>
           </div>
           <div class="col-sm">
-            <span class="text-muted text-right">Разработано с использованием <a href="https://pages.github.com/" target="_blank">GitHub&nbsp;Pages</a>, <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>, <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a></span>
+            <p class="text-muted text-right">Разработано с использованием <a href="https://pages.github.com/" target="_blank">GitHub&nbsp;Pages</a>, <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>, <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a></p>
           </div>
         </div>        
       </div>
